@@ -486,11 +486,9 @@ void KMReaderWin::writePartIcon(KMMessagePart* aMsgPart, int aPartNum)
   iconName = aMsgPart->iconName();
   if (iconName.left(11)=="unknown.xpm")
   {
-    debug("determining magic type");
     aMsgPart->magicSetType();
     iconName = aMsgPart->iconName();
   }
-  debug("href: "+href);
   mViewer->write("<TABLE><TR><TD><A HREF=\"" + href + "\"><IMG SRC=\"" + 
 		 iconName + "\">" + label + "</A></TD></TR></TABLE>" +
 		 comment + "<BR>");
@@ -786,7 +784,6 @@ void KMReaderWin::slotAtmOpen()
   cmd = "kfmclient openURL \'";
   cmd += fileName;
   cmd += "\'";
-  debug(cmd);
   system(cmd);
 }
 
@@ -802,7 +799,6 @@ void KMReaderWin::slotAtmSave()
   
   mMsg->bodyPart(mAtmCurrent, &msgPart);
   fileName.append(msgPart.name());
-  debug (fileName.data());
   
   fileName = KFileDialog::getSaveFileName(fileName.data(), "*", this);
   if(fileName.isEmpty()) return;
