@@ -36,8 +36,8 @@ extern KMIdentity *identity;
 
 #define SENDER_GROUP "sending mail"
 
-// uncomment the following line for SMTP debug output
-#define SMTP_DEBUG_OUTPUT
+/** uncomment the following line for SMTP debug output */
+//#define SMTP_DEBUG_OUTPUT
 
 #define MSG_BLOCK_SIZE 1024
 
@@ -269,7 +269,6 @@ void KMSender::cleanup(void)
 //-----------------------------------------------------------------------------
 void KMSender::slotIdle()
 {
-  debug("sender idle");
   assert(mSendProc != NULL);
   //assert(!mSendProc->sending());
   if (mSendProc->sendOk())
@@ -395,11 +394,8 @@ bool KMSendProc::addRecipients(const QStrList& aRecipientList)
   int i, j;
   bool rc;
 
-  debug("recipients: %d", aRecipientList.count());
-  
   for (receiver=recpList->first(); !receiver.isNull(); receiver=recpList->next())
   {
-    debug("receiver: %s", receiver.data());
     i = receiver.find('<');
     if (i >= 0)
     {
@@ -409,7 +405,6 @@ bool KMSendProc::addRecipients(const QStrList& aRecipientList)
 
     if (!receiver.isEmpty()) 
     {
-      debug("KMSendProc::addRecipients: adding %s", receiver.data());
       rc = addOneRecipient(receiver);
       if (!rc) return FALSE;
     }
